# acerola-jam-0

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml  index.html  justfile  kairoi-web.js
.github/workflows/: build.yml  ci.yml  release-gh-pages.yml  release-itch-html.yml
asset_src/: player.kra
asset_src/scn/: lever_post.kra
asset_src/scn/clock/: clock_bg.kra  clock_bg_small.kra  hands.kra  hands_small.kra
asset_src/scn/intro/: hack_panel.kra
asset_src/ui/keys/: KeyE.kra
assets/: globals.scn.ron  intro_trigger.scn.ron  player.json
assets/scn/: intro_trigger.scn.ron
assets/tl/: area_1.tl.ron  intro.tl.ron  intro_complete.tl.ron  main.tl.ron  main_timeline.tl.ron  test_branch.tl.ron
launchers/desktop/: Cargo.toml
launchers/desktop/src/: main.rs
launchers/web/: Cargo.toml
launchers/web/src/: main.rs
promo/: thumbnail.kra
src/: cam.rs  data.rs  happens.rs  lib.rs  player.rs  scn.rs  time_graph.rs  ui.rs  util.rs
src/data/: cam.rs  phys.rs  sprites.rs  tl.rs  ui.rs
src/scn/: clock.rs  intro.rs
