[package]
name = "sonday-acerola-jam-0"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["launchers/*"]
exclude = ["bevy-enum-components"]

[features]
debugging = []
testing = []
vis_test = ["testing", "render"]
render = ["bevy/bevy_render", "bevy/bevy_winit"]
default = ["render"]

[workspace.dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
#    "asset_processor", # only on desktop
    "animation",
    "bevy_asset",
#    "bevy_audio", # using kira
    "bevy_gilrs",
    "bevy_scene",
#    "bevy_winit", # not in CI
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
#    "bevy_render", # not in CI
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
#    "file_watcher", # only for development
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]


[dependencies]
bevy = { workspace = true }
sond-bevy-enum-components = { path = "bevy-enum-components" }
leafwing-input-manager = "0.13.3"
ron = "0.8.1"
serde = "1"
humantime = "2.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"

[profile.release-debug]
inherits = "release"

[profile.desktop]
inherits = "dev"

[profile.desktop-relese]
inherits = "release"
opt-level = 3
lto = true

[profile.desktop-release-debug]
inherits = "release"
opt-level = 3
lto = true
