[package]
name = "kairoi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
members = ["launchers/*"]
exclude = ["bevy-enum-components"]

[features]
debugging = ["bevy_xpbd_3d/debug-plugin"]
testing = []
vis_test = ["testing", "render"]
render = ["bevy/bevy_render", "bevy/bevy_winit"]
default = ["render"]

[lints.clippy]
unwrap_used = "warn"
needless_update = "allow"
too_many_arguments = "allow"

[workspace.dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
#    "asset_processor", # only on desktop
    "animation",
    "bevy_asset",
#    "bevy_audio", # using kira
    "bevy_gilrs",
    "bevy_scene",
#    "bevy_winit", # not in CI
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
#    "bevy_render", # not in CI
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "vorbis",
    "x11",
#    "file_watcher", # only for development
    "bevy_gizmos",
    "android_shared_stdcxx",
    "tonemapping_luts",
    "default_font",
    "webgl2",
]


[dependencies]
bevy = { workspace = true }
bevy_xpbd_3d = { version = "0.4.2", features = ["serialize"] }
bevy-tnua = "0.15.0"
bevy-tnua-xpbd3d = "0.2.0"
sond-bevy-enum-components = { path = "bevy-enum-components", features = ["reflect"] }
leafwing-input-manager = "0.13.3"
parking_lot = "0.12.1"
ron = "0.8.1"
serde = "1"
humantime = "2.1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"

[profile.release-debug]
inherits = "release"

[profile.desktop]
inherits = "dev"

[profile.desktop-release]
inherits = "release"
opt-level = 3
lto = true

[profile.desktop-release-debug]
inherits = "release"
opt-level = 3
lto = true
